@@ -1,14 +1,16 @@
 useDynLib(fracdiff, .registration=TRUE)
 
 importFrom("stats",
-           AIC, as.ts
+           AIC, arima, as.ts
          , fft, nextn
          , lm.fit
          , coef, logLik, resid
          , na.fail
          , printCoefmat
          , pnorm, qnorm, rnorm
-         , symnum)
+         , symnum
+         , tsp, "tsp<-"
+           )
 
 export("fracdiff", "fracdiff.sim", "fracdiff.var",
        "diffseries",
