@@ -1,8 +1,7 @@
 
-R version 2.13.1 Patched (2011-08-08 r56671)
-Copyright (C) 2011 The R Foundation for Statistical Computing
-ISBN 3-900051-07-0
-Platform: x86_64-unknown-linux-gnu (64-bit)
+R version 3.6.2 RC (2019-12-06 r77534) -- "Dark and Stormy Night"
+Copyright (C) 2019 The R Foundation for Statistical Computing
+Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -40,7 +39,7 @@ a list with components:
  [5] "ar"              "ma"              "covariance.dpq"  "fnormMin"       
  [9] "sigma"           "stderror.dpq"    "correlation.dpq" "h"              
 [13] "d.tol"           "M"               "hessian.dpq"     "length.w"       
-[17] "call"           
+[17] "residuals"       "fitted"          "call"           
 > vcov(fd1)
               d         ar1         ma1
 d    0.00059661 -0.00080522 -0.00018971
@@ -120,7 +119,7 @@ d    0.3374     0.0205    16.5   <2e-16 ***
 ar   0.7710     0.0414    18.6   <2e-16 ***
 ma  -0.3810     0.0160   -23.8   <2e-16 ***
 ---
-Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1 
+Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
 sigma[eps] = 1.0088 
 [d.tol = 0.0001221, M = 100, h = 3.082e-05]
 Log likelihood: -2.92e+03 ==> AIC = 5856.5 [4 deg.freedom]
@@ -183,5 +182,8 @@ ma1  1742  1507 -5007
 > 
 > ## Last Line:
 > cat('Time elapsed: ', proc.time() - .proctime00,'\n')
-Time elapsed:  0.21 0.003 0.213 0 0 
+Time elapsed:  0.065 0.002 0.067 0 0 
 > 
+> proc.time()
+   user  system elapsed 
+  0.164   0.021   0.225 
